tests/assembler/fail/test12.ial
type automatic VoidField
{
    field instance void foo;
}
